--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -39,7 +39,11 @@
     - Social skills and competency are often discussed in relationship with human personality traits. Should we think of social skills as long-term traits, or more shorter-term? More contextualized? Are they learned or innate?
     - Start thinking on how we can build a framework that integrates social intelligence, social skills and social competency? How to evaluate such a framework? How to study this very large problem of artificial social intelligence in a systematic way, over many years?  What would be your proposed research agenda?
   readings:
-    - 
+    - Social Intelligence and Competency
+    - Two Meanings of Social Skills&#58; Proposing an Integrative Social Skills Framework
+    - Taking Skills Seriously&#58; Toward an Integrative Model and Agenda for Social, Emotional, and Behavioral Skills
+    - Social Effectiveness in Organizations&#58; Construct Validity and Research Directions
+    - Towards an Integrative Taxonomy of Social-Emotional Competences
   
 - date: 2/10
   title: >
@@ -52,7 +56,13 @@
     - Can you identify examples and use cases where clearly a situation is referring to emotional intelligence and not social intelligence? Or vice-versa? 
     - What are the skills and/or abilities would you expect an AI system to have so that we can call it emotionally intelligent? Is there a core set of skills/abilities that are particularly important? We could call them the “core skills/abilities”. What would be the core set of abilities and skills for social intelligence? Social competence?
   readings:
-    - 
+    - What are emotions? And how can they be measured?
+    - Emotional Intelligence&#58; Toward a Consensus of Models and Measures
+    - Componential Emotion Theory Can Inform Models of Emotional Competence
+    - Emotional Expressions Reconsidered&#58; Challenges to Inferring Emotion From Human Facial Movements
+    - Practical Intelligence, Emotional Intelligence, and Social Intelligence
+    - Emotional Intelligence
+    - Emotional Intelligence Measures&#58; A Systematic Review
 
 - date: 2/17
   title: >
