--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -21,13 +21,13 @@
     - What are the main components (aka, sub-constructs) of social intelligence? In other words, can we separate the concept of social intelligence into separate factors, separate sub-concepts? What are these components (aka, sub-constructs, sub-concepts)? Can you start drafting a taxonomy of social intelligence sub-concepts?
     - How are the methods used in psychometric testing (as mentioned on the reading papers) could be applied to our recent methods used in AI, mostly based on deep learning approaches? Are these compatible? How can we handle this uncertainty both in defining and measuring social intelligence?
   readings:
-    - Social Intelligence
-    - Theory and Measurement of Social Intelligence
-    - Social Intelligence&#58; What It Is and Why We Need It More than Ever Before
-    - A Brief Tutorial on the Development of Measures for Use in Survey Questionnaires
-    - New Findings About Social Intelligence&#58; Development and application of the Magdeburg Test of Social Intelligence (MTSI)
-    - Factor analytic models of intelligence
-    - Social Ontology
+    - <a href="https://www.cambridge.org/core/books/cambridge-handbook-of-intelligence/social-intelligence/F67FA4968601383429B8ED0068B68233">Social Intelligence</a> <br/>
+    - <a href="https://www.researchgate.net/publication/27458405_Theory_and_Measurement_of_Social_Intelligence_as_a_Cognitive_Performance_Construct">Theory and Measurement of Social Intelligence</a> <br/>
+    - <a href="https://link.springer.com/chapter/10.1007/978-3-030-34964-6_1">Social Intelligence&#58; What It Is and Why We Need It More than Ever Before</a> <br/>
+    - <a href="https://journals.sagepub.com/doi/10.1177/109442819800100106">A Brief Tutorial on the Development of Measures for Use in Survey Questionnaires</a> <br/>
+    - <a href="https://www.researchgate.net/publication/263938242_New_Findings_About_Social_Intelligence_Development_and_Application_of_the_Magdeburg_Test_of_Social_Intelligence_MTSI">New Findings About Social Intelligence&#58; Development and application of the Magdeburg Test of Social Intelligence (MTSI)</a> <br/>
+    - <a href="https://www.cambridge.org/core/books/abs/cambridge-handbook-of-intelligence/factoranalytic-models-of-intelligence/212FF51624F238307B592E50E23181E3">Factor analytic models of intelligence</a> <br/>
+    - <a href="https://plato.stanford.edu/entries/social-ontology/">Social Ontology</a> <br/>
     
 - date: 2/3
   title: >
@@ -39,11 +39,11 @@
     - Social skills and competency are often discussed in relationship with human personality traits. Should we think of social skills as long-term traits, or more shorter-term? More contextualized? Are they learned or innate?
     - Start thinking on how we can build a framework that integrates social intelligence, social skills and social competency? How to evaluate such a framework? How to study this very large problem of artificial social intelligence in a systematic way, over many years?  What would be your proposed research agenda?
   readings:
-    - Social Intelligence and Competency
-    - Two Meanings of Social Skills&#58; Proposing an Integrative Social Skills Framework
-    - Taking Skills Seriously&#58; Toward an Integrative Model and Agenda for Social, Emotional, and Behavioral Skills
-    - Social Effectiveness in Organizations&#58; Construct Validity and Research Directions
-    - Towards an Integrative Taxonomy of Social-Emotional Competences
+    - <a href="  ">Social Intelligence and Competency</a> <br/>
+    - <a href="  ">Two Meanings of Social Skills&#58; Proposing an Integrative Social Skills Framework</a> <br/>
+    - <a href="  ">Taking Skills Seriously&#58; Toward an Integrative Model and Agenda for Social, Emotional, and Behavioral Skills</a> <br/>
+    - <a href="  ">Social Effectiveness in Organizations&#58; Construct Validity and Research Directions</a> <br/>
+    - <a href="  ">Towards an Integrative Taxonomy of Social-Emotional Competences</a> <br/>
   
 - date: 2/10
   title: >
@@ -56,13 +56,13 @@
     - Can you identify examples and use cases where clearly a situation is referring to emotional intelligence and not social intelligence? Or vice-versa? 
     - What are the skills and/or abilities would you expect an AI system to have so that we can call it emotionally intelligent? Is there a core set of skills/abilities that are particularly important? We could call them the “core skills/abilities”. What would be the core set of abilities and skills for social intelligence? Social competence?
   readings:
-    - What are emotions? And how can they be measured?
-    - Emotional Intelligence&#58; Toward a Consensus of Models and Measures
-    - Componential Emotion Theory Can Inform Models of Emotional Competence
-    - Emotional Expressions Reconsidered&#58; Challenges to Inferring Emotion From Human Facial Movements
-    - Practical Intelligence, Emotional Intelligence, and Social Intelligence
-    - Emotional Intelligence
-    - Emotional Intelligence Measures&#58; A Systematic Review
+    - <a href="  ">What are emotions? And how can they be measured?</a> <br/>
+    - <a href="  ">Emotional Intelligence&#58; Toward a Consensus of Models and Measures</a> <br/>
+    - <a href="  ">Componential Emotion Theory Can Inform Models of Emotional Competence</a> <br/>
+    - <a href="  ">Emotional Expressions Reconsidered&#58; Challenges to Inferring Emotion From Human Facial Movements</a> <br/>
+    - <a href="  ">Practical Intelligence, Emotional Intelligence, and Social Intelligence</a> <br/>
+    - <a href="  ">Emotional Intelligence</a> <br/>
+    - <a href="  ">Emotional Intelligence Measures&#58; A Systematic Review</a> <br/>
 
 - date: 2/17
   title: >
