--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -56,13 +56,13 @@
     - Can you identify examples and use cases where clearly a situation is referring to emotional intelligence and not social intelligence? Or vice-versa? 
     - What are the skills and/or abilities would you expect an AI system to have so that we can call it emotionally intelligent? Is there a core set of skills/abilities that are particularly important? We could call them the “core skills/abilities”. What would be the core set of abilities and skills for social intelligence? Social competence?
   readings:
-    - <a href="  ">What are emotions? And how can they be measured?</a> <br/>
-    - <a href="  ">Emotional Intelligence&#58; Toward a Consensus of Models and Measures</a> <br/>
-    - <a href="  ">Componential Emotion Theory Can Inform Models of Emotional Competence</a> <br/>
-    - <a href="  ">Emotional Expressions Reconsidered&#58; Challenges to Inferring Emotion From Human Facial Movements</a> <br/>
-    - <a href="  ">Practical Intelligence, Emotional Intelligence, and Social Intelligence</a> <br/>
-    - <a href="  ">Emotional Intelligence</a> <br/>
-    - <a href="  ">Emotional Intelligence Measures&#58; A Systematic Review</a> <br/>
+    - <a href="https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=c22140d2d12272a0074d809d8b9f6a2e40755d7a">What are emotions? And how can they be measured?</a> <br/>
+    - <a href="https://compass.onlinelibrary.wiley.com/doi/10.1111/j.1751-9004.2010.00277.x">Emotional Intelligence&#58; Toward a Consensus of Models and Measures</a> <br/>
+    - <a href="https://academic.oup.com/book/6088/chapter-abstract/149543348?redirectedFrom=fulltext">Componential Emotion Theory Can Inform Models of Emotional Competence</a> <br/>
+    - <a href="https://journals.sagepub.com/doi/10.1177/1529100619832930">Emotional Expressions Reconsidered&#58; Challenges to Inferring Emotion From Human Facial Movements</a> <br/>
+    - <a href="https://psycnet.apa.org/record/2008-13470-016">Practical Intelligence, Emotional Intelligence, and Social Intelligence</a> <br/>
+    - <a href="https://www.cambridge.org/core/books/abs/cambridge-handbook-of-intelligence/emotional-intelligence/35BECAF5F4BF696CE17F80B84C88CCDD">Emotional Intelligence</a> <br/>
+    - <a href="https://www.mdpi.com/2227-9032/9/12/1696">Emotional Intelligence Measures&#58; A Systematic Review</a> <br/>
 
 - date: 2/17
   title: >
