--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -4,12 +4,9 @@
   slides:
   topics:
     - Course syllabus and requirements
-    - Multimodal principles&#58; heterogeneity, connections, and interactions
-    - Multimodal technical challenges
+    - Definitions and challenges
   readings:
-    - <a href="https://arxiv.org/abs/2209.03430">Foundations and Recent Trends in Multimodal Machine Learning&#58; Principles, Challenges, and Open Questions</a> <br/>
-    - <a href="https://arxiv.org/abs/1705.09406">Multimodal Machine Learning&#58; A Survey and Taxonomy</a> <br/>
-    - <a href="https://arxiv.org/abs/1206.5538">Representation Learning&#58; A Review and New Perspectives</a> <br/>
+    - None!
 
 - date: 1/27
   title: >
