--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -99,7 +99,7 @@
   
 - date: 3/24
   title: >
-    Week 10: <strong>Modeling Social Perception</strong>
+    Week 10: <strong>Modeling social perception</strong>
   topics:
   
   readings:
