--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -28,7 +28,7 @@
     
 - date: 2/3
   title: >
-    Week 3: <strong>Social skills and competence</strong>
+    Week 3: <strong>Social skills and competence</strong> <a href="11866_week3.pdf">[synopsis]</a>
   topics:
     - How would define the concepts of social skills and social competency? How does social intelligence relate to these concepts (social skills and competency)? What aspects of the proposed definitions most resonated with you? Will these definitions of social intelligence generalize to artificial social intelligence? 
     - Would it be best to study “artificial social skills and competency”, instead of “artificial social intelligence”? Do you see both concepts working together? What are the main differences? Which one should we prioritize?
