--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -75,7 +75,7 @@
     - <a href="https://dl.acm.org/doi/abs/10.1145/3439720">A Taxonomy of Social Errors in Human-Robot Interaction</a> <br/>
     - <a href="https://dl.acm.org/doi/abs/10.1145/3415139">Measuring the Perceived Social Intelligence of Robots</a> <br/>
     - <a href="https://dl.acm.org/doi/abs/10.1145/3514197.3549612">The Artificial-Social-Agent Questionnaire&#58; Establishing the long and short questionnaire versions</a> <br/>
-    - <a href="https://arxiv.org/abs/1904.09728">SOCIAL IQA: Commonsense Reasoning about Social Interactions</a> <br/>
+    - <a href="https://arxiv.org/abs/1904.09728">SOCIAL IQA&#58; Commonsense Reasoning about Social Interactions</a> <br/>
     - <a href="https://data.4tu.nl/articles/dataset/Artificial_Social_Agent_Questionnaire_Instrument/19650846">Artificial Social Agent Questionnaire Instrument</a> <br/>
     - <a href="https://dl.acm.org/doi/10.1145/3383652.3423873">The 19 Unifying Questionnaire Constructs of Artificial Social Agents&#58; An IVA Community Analysis</a> <br/>
     - <a href="https://www.cambridge.org/core/books/cambridge-handbook-of-intelligence/practical-intelligence/758FF9A0B162839C5012A54A4F526187">Practical Intelligence</a> <br/>
