--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -111,6 +111,13 @@
     - Interpersonal communication is a joint process between two or more people (e.g., as discussed in the “Cognitive pragmatics” paper). How does this common ground and joint action process relate to last week reading on social cognition and theory of mind?
     - As we start thinking about building and evaluating artificial social intelligence, what aspects of interpersonal communication will be core to this endeavor? Can we build artificial social intelligence without first modeling interpersonal communication? What are the key components of interpersonal communication needed for artificial social intelligence?
   readings:
+    - <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9780203710753-24/interpersonal-communication-charles-berger-michael-roloff">Interpersonal Communication</a> <br/>
+    - <a href="http://www.columbia.edu/~rmk7/PDF/IESBS.pdf">Psychology of Verbal Communication</a> <br/>
+    - <a href="https://books.google.com/books?id=ZNF1AwAAQBAJ&lpg=PR3-IA110&ots=roie60skrG&dq=info%3AC8G-WQ1vp5sJ%3Ascholar.google.com&lr&pg=PR3-IA110#v=onepage&q&f=false">Nonverbal Signals</a> <br/>
+    - <a href="https://www.degruyter.com/document/doi/10.1515/iprg.2011.020/html">Cognitive Pragmatics&#58; The Mental Processes of Communication/a> <br/>
+    - <a href="https://www.sciencedirect.com/science/article/pii/S088523082030111X">Turn-taking in Conversational Systems and Human-Robot Interaction&#58; A Review</a> <br/>
+    - <a href="https://socialsci.libretexts.org/Bookshelves/Communication/Interpersonal_Communication/Book%3A_Interpersonal_Communication_-_A_Mindful_Approach_to_Relationships_(Wrench_et_al.)/02%3A_Overview_of_Interpersonal_Communication/2.04%3A_Models_of_Interpersonal_Communication">Models of Interpersonal Communication</a> <br/>
+    - <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9780203710753-28/nonverbal-communication-amy-ebesu-hubbard-judee-burgoon">Nonverbal Communication</a> <br/>
   
 - date: 3/10
   title: >
