--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -114,7 +114,7 @@
     - <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9780203710753-24/interpersonal-communication-charles-berger-michael-roloff">Interpersonal Communication</a> <br/>
     - <a href="http://www.columbia.edu/~rmk7/PDF/IESBS.pdf">Psychology of Verbal Communication</a> <br/>
     - <a href="https://books.google.com/books?id=ZNF1AwAAQBAJ&lpg=PR3-IA110&ots=roie60skrG&dq=info%3AC8G-WQ1vp5sJ%3Ascholar.google.com&lr&pg=PR3-IA110#v=onepage&q&f=false">Nonverbal Signals</a> <br/>
-    - <a href="https://www.degruyter.com/document/doi/10.1515/iprg.2011.020/html">Cognitive Pragmatics&#58; The Mental Processes of Communication/a> <br/>
+    - <a href="https://www.degruyter.com/document/doi/10.1515/iprg.2011.020/html">Cognitive Pragmatics&#58; The Mental Processes of Communication</a> <br/>
     - <a href="https://www.sciencedirect.com/science/article/pii/S088523082030111X">Turn-taking in Conversational Systems and Human-Robot Interaction&#58; A Review</a> <br/>
     - <a href="https://socialsci.libretexts.org/Bookshelves/Communication/Interpersonal_Communication/Book%3A_Interpersonal_Communication_-_A_Mindful_Approach_to_Relationships_(Wrench_et_al.)/02%3A_Overview_of_Interpersonal_Communication/2.04%3A_Models_of_Interpersonal_Communication">Models of Interpersonal Communication</a> <br/>
     - <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9780203710753-28/nonverbal-communication-amy-ebesu-hubbard-judee-burgoon">Nonverbal Communication</a> <br/>
