--- a/_data/lectures_2023.yml
+++ b/_data/lectures_2023.yml
@@ -103,8 +103,7 @@
   title: >
     Week 7: <strong>Interpersonal communication</strong>
   topics:
-    - A significant portion of many social interactions involves communication of verbal and nonverbal messages. This interpersonal communication between dyads and small groups is a relevant facet of social interactions. 
-    - From your readings, what are the main functions of interpersonal communication? How do you compare the functions of verbal communication vs functions of nonverbal communication?
+    - A significant portion of many social interactions involves communication of verbal and nonverbal messages. This interpersonal communication between dyads and small groups is a relevant facet of social interactions. From your readings, what are the main functions of interpersonal communication? How do you compare the functions of verbal communication vs functions of nonverbal communication?
     - How are these functions of interpersonal communication aligned with abilities and skills discussed in the previous week when studying social and emotional intelligence? Are these functions overlapping? Some of them unique to interpersonal communication? Some of them unique to social intelligence?
     - The interpersonal communication process is a dynamic multimodal process which involves many components (e.g., see Models of Interpersonal Communication). Based on your readings, what would you identify as the main components of the interpersonal communication process?
     - Are all components of interpersonal communication also important when assessing and modeling social intelligence? Would you see some components as “basic communication” that is not as relevant to social intelligence and social competence?
